--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xlsx-to-json",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Convert xlsx to json",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
