--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "xlsx": "~0.3.6",
     "csv": "~0.3.6"
+  },
+  "devDependencies": {
+    "mocha": "~1.17.1",
+    "should": "~3.1.2"
   }
 }
