--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xlsx-to-json",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Convert xlsx to json",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "author": "chilijung <chilijung@gmail.com> (http://lijung.com/)",
   "license": "MIT",
