--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DataGarage/node-xlsx-json"
+  },
   "author": "chilijung <chilijung@gmail.com> (http://lijung.com/)",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DataGarage/node-xml-json/issues"
+  },
+  "homepage": "https://github.com/DataGarage/node-xml-json",
   "dependencies": {
     "xlsx": "~0.3.6",
     "csv": "~0.3.6"
